test/zinc_source/compile_errors/functions/24_ufcs_unknown_named_arg.zn
// expected-error: unknown named argument 'z'

fn combine(x: i64, y) {
    return x + y
}

fn main() {
    value = 1
    print(value.combine(z=2))
}
